ws-slo/apps/immich-postgres/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-postgres
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: immich
      ports:
        - port: postgres
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: immich-postgres
      app.kubernetes.io/name: postgres
  policyTypes:
    - Ingress
